syntax = "proto3";

package grpc_backend.v1;
option go_package = "grpc_backend/src/gen/proto";

message User {
  int64 user_id = 1;
  string username = 2;
  string email = 3;
}

message ListUsersRequest {};
message ListUsersResponse {
  repeated User users = 1;
}

service UsersService {
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}
